# google-sheets

./: .gitignore  Dockerfile  README.md  basic-compose.prod.yml  basic-compose.yml  credentials.json  manage.py  pyproject.toml  run.py
src/frontend/: main.css  main.html  main.js
src/modules/orders/: admin.py  apps.py  models.py  tasks.py
src/modules/orders/migrations/: 0001_initial.py  0002_rename_change_date_order_changed_date.py  0003_alter_order_options_alter_order_number.py  0004_order_deleted_from_file.py  0005_alter_order_number.py
src/modules/orders/rest/: serializers.py  urls.py  views.py
src/modules/orders/services/: bank.py  google.py  statistics.py
src/settings/: .env  celery.py  settings.py  urls.py
src/telegram/: .env  bot.py
